# Hapi-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  run.sh
.github/workflows/: CI.yml  realease.yml
benches/: benchmark.rs
src/: cli.rs  lib.rs  main.rs
src/assets/: invalid.rs  loading.rs  logo.rs  mod.rs
src/cmd/: args.rs  metadata.rs  mod.rs
src/core/: authorization.rs  mod.rs  request.rs
src/http/: request.rs  response.rs
