[package]
name = "tooling"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http-req"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

