[package]
name = "tooling"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http-req"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
colored = "3.1.1"
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
base64 = "0.21"
indicatif = "0.18.4"

[dev-dependencies]
criterion = "0.4.0"
httpmock = "0.6.8"

[[bench]]
name = "benchmark"

[profile.bench]
debug = true